--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
     "react-hot-toast": "^2.5.2",
     "zod": "^3.25.76"
   },
